--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Nusa-Guide</string>
+    <string name="app_name">Nusa Guide</string>
 
     <string name="titleUser">"Masuk Sebagai Pengguna?"</string>
     <string name="titleTour">"Masuk Sebagai \nTour Guide?"</string>
